src/Profile.css
.content-desktop {
  display: block;
  margin-left: 30px;
  margin-right: 10px;
  height: 100%;
}
#content-mobile {display: none;}

.headshot {
  max-width: 500px;
  max-height: auto;
}

#work-details {
  max-width: 95%
}

#experience-content {
  max-width: 75%
}

.main {
  margin-left: 30px;
  margin-right: 30px;
}

.buffer {
  display: none;
}
#bio-box {
  margin-right: 10%;
}
a {
  text-decoration: none;
  color: inherit;
}

#home {
  margin-top: 100px;
}

#club-logo {
  max-width: 40px;
  max-height: auto;
  display: inline-block;
}

#club-space {
  display: inline-block;
}

#club-name {
  display: inline-block;
}

#social-link {
  color: #A51C30
}

.nav-items {
  position: -webkit-sticky;
  position: sticky;
  text-align: right;
  top: 100px; /* Stay at the top */
  margin-top: 100px;
}

#project-name {
  margin-top: 10px;
  display: inline-block;
}

#project-date {
  display: inline-block;
}

.project-header {
  margin-bottom: 5px;
}

.section-title {
  display: flex;
  margin: 0px;
  overflow :hidden;
  text-align: left;
  line-height: 1.4em;
}

.section-title:after {
  display: block;
  float: right;
  margin-left: 25px;
  margin-top: 1.4em; /* half the line-height */
  border-top: 1px solid black;
  flex: 1;
  content: "";
}

.divider {
  display: inline-block;
}

.project-link {
  text-decoration: none;
  font-size: 12px;
  background-color: #A51C30;
  color: white;
  border-radius: 3px;
  padding: 2px 6px 2px 6px;
}

.project-tech {
  text-decoration: none;
  font-size: 12px;
  background-color: #A9A9A9;
  color: white;
  border-radius: 3px;
  padding: 2px 6px 2px 6px;
  border: 0px;
  margin-top: 10px;
}

.project-tech:focus {
  outline: none;
}

@media screen and (max-width: 1023px) {

  #home {
    margin-top: 10px;
  }

  #work-details {
    max-width: 100%
  }

  #experience-content {
    max-width: 100%
  }

  #bio-box {
    margin-right: 0%;
  }

.content-desktop {display: none;
}
#content-mobile {
  display: block;
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
}

}

